[gd_scene load_steps=15 format=3 uid="uid://j3vno6m6c6ng"]

[ext_resource type="Script" uid="uid://bl0x6ooit8gpl" path="res://Scripts/LevelIntro/level_intro.gd" id="1_ted0y"]
[ext_resource type="PackedScene" uid="uid://b2m46f548yywj" path="res://Scenes/UI/pause_menu.tscn" id="2_jroud"]
[ext_resource type="Texture2D" uid="uid://flp0e0f07g3g" path="res://Img/Background/LevelIntro/Ehpad couloir-1.png" id="2_vswdf"]
[ext_resource type="Texture2D" uid="uid://cycdqcq522h1e" path="res://Img/Background/LevelIntro/Ehpad couloir-2.png" id="3_4yojd"]
[ext_resource type="Texture2D" uid="uid://clgc6rw11ve8q" path="res://Img/Background/LevelIntro/Ehpad couloir-3.png" id="4_ibo0l"]
[ext_resource type="Texture2D" uid="uid://cts1vsdgjuaog" path="res://Img/Background/LevelIntro/Ehpad couloir-4.png" id="5_jroud"]
[ext_resource type="Texture2D" uid="uid://dfht30ka51r7h" path="res://Img/Background/LevelIntro/SolBasique.png" id="7_ibo0l"]
[ext_resource type="PackedScene" uid="uid://by4hv48lgyhg2" path="res://Scenes/Personnages/Player/RafVieux.tscn" id="8_jroud"]
[ext_resource type="PackedScene" uid="uid://37i8hta2dva3" path="res://Scenes/Personnages/PNJ/infirmier.tscn" id="9_s7lup"]

[sub_resource type="SpriteFrames" id="SpriteFrames_082nd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vswdf")
}, {
"duration": 1.0,
"texture": ExtResource("3_4yojd")
}, {
"duration": 1.0,
"texture": ExtResource("4_ibo0l")
}, {
"duration": 1.0,
"texture": ExtResource("5_jroud")
}],
"loop": true,
"name": &"LevelIntro",
"speed": 3.0
}]

[sub_resource type="GDScript" id="GDScript_ibo0l"]
script/source = "extends AnimatedSprite2D

#func _ready():
	#var screen_size = get_viewport_rect().size
	#var tex_size = sprite_frames.get_frame_texture(\"LevelIntro\", 0).get_size()
	#var ratio = max(screen_size.x / tex_size.x, screen_size.y / tex_size.y)
	#print(ratio)
	#scale = Vector2(ratio, ratio)
"

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jroud"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_s7lup"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ibo0l"]

[node name="LevelIntro" type="Node2D"]
script = ExtResource("1_ted0y")

[node name="PauseMenu" parent="." instance=ExtResource("2_jroud")]
visible = false

[node name="Background" type="Node2D" parent="."]

[node name="AnimatedBackground" type="AnimatedSprite2D" parent="Background"]
scale = Vector2(1.859, 1.859)
sprite_frames = SubResource("SpriteFrames_082nd")
animation = &"LevelIntro"
autoplay = "LevelIntro"
centered = false
script = SubResource("GDScript_ibo0l")

[node name="WallLeft" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
shape = SubResource("SegmentShape2D_jroud")

[node name="WallRight" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
shape = SubResource("SegmentShape2D_s7lup")

[node name="Ground" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="GroundSprite" type="Sprite2D" parent="Ground"]
position = Vector2(0, 201)
scale = Vector2(1.8603516, 1.8603516)
texture = ExtResource("7_ibo0l")
centered = false

[node name="GroundCollision" type="CollisionShape2D" parent="Ground"]
shape = SubResource("SegmentShape2D_ibo0l")

[node name="Infirmier" parent="." instance=ExtResource("9_s7lup")]
collision_layer = 4
collision_mask = 2
player_path = NodePath("../PlayerRafVieux")

[node name="PlayerRafVieux" parent="." instance=ExtResource("8_jroud")]
collision_mask = 3
metadata/_edit_group_ = true
